--- a/semana5/css/public.css
+++ b/semana5/css/public.css
@@ -183,3 +183,70 @@ h3.menu-item-title {
     width: 100%;
   }
 }
+
+/****** Signg Up **********************/
+
+body {
+  font-size: 1.2em;
+}
+input {
+  font-size: 14px;
+  margin-bottom: 10px;
+  color: black;
+  display: inline-block;
+  float: left;
+  width: 300px;
+}
+
+input[name=menunumber] {
+  width: 50px;
+}
+
+label{
+    display: inline-block;
+    float: left;
+    clear: left;
+    width: 200px;
+    text-align: left;
+    font-size: 14px;
+}
+
+form span {
+  float: left;
+  margin-left: 20px;
+  display: inline-block;
+}
+
+button {
+  font-size: 18px;
+  color: black;
+  float: left;
+  clear: left;
+  text-align: center;
+}
+
+button:disabled {
+  color:gray;
+}
+
+button:enabled {
+  color:black;
+}
+
+legend {
+  color: white;
+}
+
+.ng-touched.ng-valid {
+  border: 2px green solid;
+}
+
+.ng-touched.ng-invalid {
+  border: 2px red solid;
+}
+
+#info {
+  margin-top: 20px;
+  float: left;
+  clear: left;
+}
